# diglett

./: Cargo.toml  readme.md
.github/workflows/: release.yaml  tests.yaml
docs/: readme.md
docs/uml/: wire.wsd
src/: lib.rs
src/agent/: mod.rs
src/bins/: agent.rs  server.rs
src/server/: auth.rs  mod.rs  register.rs
src/wire/: encrypt.rs  frame.rs  mod.rs
