[package]
name = "diglett"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path="src/lib.rs"

[dependencies]
tokio = {version = "1", features=["rt-multi-thread", "macros", "io-util", "net"]}
binary-layout = "3.2"
secp256k1 = "0.28"
thiserror = "1"

# [dev-dependencies]
# tokio = {version = "1", features=["rt-multi-thread", "macros", "io-util", "fs"]}
