[package]
name = "diglett"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path="src/lib.rs"

[[bin]]
name = "diglett"
path = "src/bins/agent.rs"

[[bin]]
name = "diglett-server"
path = "src/bins/server.rs"

[dependencies]
tokio = {version = "1", features=["rt-multi-thread", "macros", "io-util", "net", "sync"]}
binary-layout = "3.2"
secp256k1 = { version = "0.28", features=["rand-std", "hashes-std"] }
thiserror = "1"
log = "0.4"
simple_logger = "4.3"
clap = {version = "4.4", features=["derive"]}
async-trait = "0.1"
sha2 = "0.10"

[build-dependencies]
git-version = "0.3"
